--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+label { 
+    display: block;
+
+    + label {
+        margin-top: .5em;
+    }
+}
